ajustes de las tarjetas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/cards.css">
 </head>
 
 <body>
@@ -100,144 +103,97 @@
     </button>
   </div>
 
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img style="height: 420px;"
-          src="https://img.freepik.com/foto-gratis/resumen-superficie-texturas-muro-piedra-hormigon-blanco_74190-8189.jpg?size=626&ext=jpg&ga=GA1.1.539837299.1710201600&semt=ais"
-          class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                  <img style="width: 285px; height: 220px;" src="img/WhatsApp Image 2024-03-06 at 3.40.48 PM (1).jpeg"
-                    class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p class="card-text">...</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
+<!-- Cards -->
+<section>
+  <div class="swiper">
+      <div class="swiper-wrapper">
+          <div class="swiper-slide swiper-slide--one">
+              <span>domestic</span>
+              <div>
+                  <h2>Enjoy the exotic of sunny Hawaii</h2>
+                  <p>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                          stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                      </svg>
+                      Maui, Hawaii
+                  </p>
               </div>
-
-              <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                  <img style="width: 285px; height: 220px;" src="img/WhatsApp Image 2024-03-06 at 3.40.48 PM.jpeg"
-                    class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p class="card-text">...
-                    </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
+          </div>
+          <div class="swiper-slide swiper-slide--two">
+              <span>subtropical</span>
+              <div>
+                  <h2>The Island of Eternal Spring</h2>
+                  <p>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                          stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                      </svg>
+                      Lanzarote, Spanien
+                  </p>
               </div>
+          </div>
 
-              <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                  <img style="width: 285px; height: 220px;" src="img/WhatsApp Image 2024-03-06 at 3.46.26 PM.jpeg"
-                    class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <p class="card-text">...</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
+          <div class="swiper-slide swiper-slide--three">
+              <span>history</span>
+              <div>
+                  <h2>Awesome Eiffel Tower</h2>
+                  <p>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                          stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                      </svg>
+                      Paris, France
+                  </p>
               </div>
-
-            </div>
           </div>
-        </div>
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img
-          src="https://img.freepik.com/foto-gratis/resumen-superficie-texturas-muro-piedra-hormigon-blanco_74190-8189.jpg?size=626&ext=jpg&ga=GA1.1.539837299.1710201600&semt=ais"
-          class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img
-          src="https://img.freepik.com/foto-gratis/resumen-superficie-texturas-muro-piedra-hormigon-blanco_74190-8189.jpg?size=626&ext=jpg&ga=GA1.1.539837299.1710201600&semt=ais"
-          class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
 
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img style="height: 420px;"
-            src="https://img.freepik.com/foto-gratis/resumen-superficie-texturas-muro-piedra-hormigon-blanco_74190-8189.jpg?size=626&ext=jpg&ga=GA1.1.539837299.1710201600&semt=ais"
-            class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-4">
-                  <div class="card" style="width: 18rem;">
-                    <img style="width: 285px; height: 220px;" src="img/WhatsApp Image 2024-03-06 at 3.40.48 PM (1).jpeg"
-                      class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">...</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-                </div>
-  
-                <div class="col-4">
-                  <div class="card" style="width: 18rem;">
-                    <img style="width: 285px; height: 220px;" src="img/WhatsApp Image 2024-03-06 at 3.40.48 PM.jpeg"
-                      class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">...
-                      </p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-                </div>
-  
-                <div class="col-4">
-                  <div class="card" style="width: 18rem;">
-                    <img style="width: 285px; height: 220px;" src="img/WhatsApp Image 2024-03-06 at 3.46.26 PM.jpeg"
-                      class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <p class="card-text">...</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-                </div>
-  
+          <div class="swiper-slide swiper-slide--four">
+              <span>Mayans</span>
+              <div>
+                  <h2>One of the safest states in Mexico</h2>
+                  <p>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                          stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                      </svg>
+                      The Yucatan, Mexico
+                  </p>
               </div>
-            </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 mt-5 mb-3 mb-sm-0">
-        <div class="card">
-          <div class="dv1" class="card-body">
-            <h5 align="center" class="card-title">Mision </h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.
-            </p>
+
+          <div class="swiper-slide swiper-slide--five">
+              <span>native</span>
+              <div>
+                  <h2>The most popular yachting destination</h2>
+                  <p>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                          stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                          <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                      </svg>
+                      Whitsunday Islands, Australia
+                  </p>
+              </div>
           </div>
-        </div>
       </div>
-      <div class="col-sm-6 mt-5">
-        <div class="card">
-          <div class="dv1" class="card-body">
-            <h5 align="center" class="card-title">Vision</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+      <div class="swiper-pagination"></div>
   </div>
-  </div>
+</section>
 
 
 
@@ -280,4 +236,4 @@
 </html>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="javaScript.js"></script>
+  <script src="assets/js/swiper.js"></script>
