--- a/assets/index.html
+++ b/assets/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js"></script>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/cards.css">
-  <link rel="icon" type="image/x-icon" href="assets/img/logo-vams.png" />
+  <link rel="icon" type="image/x-icon" href="/assets/img/logo-vams.png" />
 </head>
 
 <body>
@@ -70,21 +70,21 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/img/nav.jpeg" width="100px " height="600px" class="d-block w-100" alt="...">
+        <img src="/assets/img/nav.jpeg" width="100px " height="600px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Compras</h5>
           <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/img/nav2.jpeg" width="100px" height="600px" class="d-block w-100" alt="...">
+        <img src="/assets/img/nav2.jpeg" width="100px" height="600px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
           <p>...</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/img/nav3.jpeg" width="100px" height="600px" class="d-block w-100" alt="...">
+        <img src="/assets/img/nav3.jpeg" width="100px" height="600px" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
